# agent-ilm

./: .dockerignore  .gitignore  Dockerfile  README.md  agent-ilm.spec  pyproject.toml
.github/workflows/: build.yml
agent_ilm/: __init__.py  audit.py  decision_graph.py  entra.py  registry.py
agent_ilm/cli/: __init__.py  __main__.py
docs/: README.md  component-manifest.md
schemas/: component.schema.json
